--- a/web.html
+++ b/web.html
@@ -17,7 +17,7 @@
       name="keywords"
       content="سداد متعثرات, استخراج تمويل شخصي, استخراج تمويل عقاري, فك إيقاف الخدمات, تسديد المخالفات"
     />
-    <meta name="author" content="حسام" />
+    <meta name="author" content="sdadsaudi.netlify.app" />
     <meta name="robots" content="index, follow" />
     <!-- Allows search engines to index the page -->
 
@@ -30,13 +30,9 @@
       property="og:description"
       content="خدمات سداد القروض المتعثرات، التمويل الشخصي والعقاري، وفك إيقاف الخدمات. اتصل بنا الآن!"
     />
-    <meta
-      property="og:image"
-      content="https://yourwebsite.com/images/سداد-قروض.jpg"
-    />
-    <!-- Replace with actual image URL -->
-    <meta property="og:url" content="https://yourwebsite.com" />
-    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://sdadsaudi.netlify.app/images/سداد-قروض.jpg">
+    <meta property="og:url" content="https://sdadsaudi.netlify.app">
+    <meta property="og:type" content="website">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
@@ -48,42 +44,39 @@
       name="twitter:description"
       content="نوفر خدمات سداد المتعثرات وتمويل شخصي وعقاري في أسرع وقت ممكن. تواصل معنا الآن!"
     />
-    <meta
-      name="twitter:image"
-      content="https://yourwebsite.com/images/سداد-قروض.jpg"
-    />
+    <meta name="twitter:image" content="https://sdadsaudi.netlify.app/images/سداد-قروض.jpg">
+
 
     <!-- Canonical URL (Prevents Duplicate Content Issues) -->
-    <link rel="canonical" href="https://yourwebsite.com" />
+    <link rel="canonical" href="https://sdadsaudi.netlify.app">
 
     <!-- Favicon -->
-    <link
-      rel="icon"
-      type="image/png"
-      href="https://yourwebsite.com/favicon.png"
-    />
+    <link rel="icon" type="image/png" href="https://sdadsaudi.netlify.app/images/favicon.png">
+
 
     <!-- Structured Data (Schema Markup for SEO) -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
         "@type": "FinancialService",
-        "name": "سداد متعثرات وتمويل شخصي وعقاري",
-        "url": "https://yourwebsite.com",
-        "logo": "https://yourwebsite.com/logo.png",
-        "description": "نقدم خدمات سداد المتعثرات، استخراج تمويل شخصي وعقاري، فك إيقاف الخدمات، وتسديد المخالفات بسرعة وموثوقية.",
+        "name": "سداد متعثرات السعودية",
+        "url": "https://sdadsaudi.netlify.app",
+        "logo": "https://sdadsaudi.netlify.app/images/logo.png",
+        "image": "https://sdadsaudi.netlify.app/images/سداد-قروض.jpg",
+        "description": "نقدم خدمات سداد المتعثرات، التمويل الشخصي والعقاري، فك إيقاف الخدمات، وتسديد المخالفات في السعودية.",
         "address": {
           "@type": "PostalAddress",
-          "addressLocality": "الرياض",
           "addressCountry": "SA"
         },
         "contactPoint": {
           "@type": "ContactPoint",
           "telephone": "+966550252845",
-          "contactType": "customer service"
+          "contactType": "customer service",
+          "areaServed": "SA",
+          "availableLanguage": "Arabic"
         }
       }
-    </script>
+      </script>
 
     <link rel="stylesheet" href="./web.css" />
   </head>
@@ -104,7 +97,7 @@
             <li>٥. تسديد المخالفات</li>
           </ol>
           <h2 class="two">يرجى الاتصال بالرقم</h2>
-          <h2 class="three">0550252845</h2>
+          <h2 class="three"><a href="tel:+966550252845">0550252845</a></h2>
           <!-- Clickable phone number -->
         </div>
       </div>
