--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <li>٥. تسديد المخالفات</li>
           </ol>
           <h2 class="two">يرجى الاتصال بالرقم</h2>
-          <h2 class="three"><a href="tel:0550252845">0550252845</a></h2>
+          <h2 class="three"><a href="tel:+966550252845">0550252845</a></h2>
           <!-- Clickable phone number -->
         </div>
       </div>
