--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       content="نوفر خدمات سداد المتعثرات وتمويل شخصي وعقاري في أسرع وقت ممكن. تواصل معنا الآن!"
     />
     <meta name="twitter:image" content="https://sdadsaudi.netlify.app/images/سداد-قروض.jpg">
-
+    <meta name="google-site-verification" content="CQDCurChmgWM5r9Nd0csN0lopPZjB46JAQ6VgXMEfow" />
 
     <!-- Canonical URL (Prevents Duplicate Content Issues) -->
     <link rel="canonical" href="https://sdadsaudi.netlify.app">
@@ -54,6 +54,7 @@
     <link rel="icon" type="image/png" href="https://sdadsaudi.netlify.app/images/favicon.png">
 
 
+    <link rel="stylesheet" href="./web.css" />
     <!-- Structured Data (Schema Markup for SEO) -->
     <script type="application/ld+json">
       {
@@ -78,7 +79,6 @@
       }
       </script>
 
-    <link rel="stylesheet" href="./web.css" />
   </head>
   <body>
     <h1 class="head">سداد متعثرات - حلول مالية سريعة</h1>
